--- a/angular-shopping/src/app/app.component.html
+++ b/angular-shopping/src/app/app.component.html
@@ -1,13 +1,11 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <app-header></app-header>
-
 <div class = "container"> 
   <div class = "row">
-    <div class= "col-12">
-      <app-items></app-items>
+    <div class= "col-7">
+      <app-items-list></app-items-list>
       <app-shopping-list></app-shopping-list>
     </div>
   </div>
 </div>
-
 <router-outlet></router-outlet>
