--- a/angular-shopping/src/app/items/items-list/a-item/a-item.component.html
+++ b/angular-shopping/src/app/items/items-list/a-item/a-item.component.html
@@ -1,3 +1,11 @@
-<p>
-  a-item works!
-</p>
+           <div class= "card">
+               
+               <img class = "card-img-top" [src] = "item.imagePath" style = "max-height: 100px;">
+               
+               <div class = "card-body">
+                   <h5 class=card-title> {{item.name }}</h5>
+                   <p class = "card-text">{{item.details}} </p>
+               </div>
+               
+               
+           </div>
