added page routing and working on editing component

--- a/angular-shopping/src/app/items/items-details/items-details.component.html
+++ b/angular-shopping/src/app/items/items-details/items-details.component.html
@@ -1,3 +1,22 @@
-<p>
-  items-details works!
-</p>
+
+<div class = "w-100 mx-0">
+   <div class = "jumbotron jumbotron-fluid mx-0">
+       <div class = "containter">
+           <h1 class= "display-4">{{item.name}}</h1>
+           <hr class = "my-4">
+           <div class = row>
+               <div class = "col-6">
+               <h4> Rating: {{item.getRating()}}</h4>
+            </div>
+               <div class = "col-6">
+                   <span class= "pull-right">
+                       <h4> $ {{item.price}}</h4>
+                   </span>
+               </div> 
+           
+            </div>
+           <p class = "lead">{{item.details}}</p>
+           <p> </p> 
+<div class = "w-100">
+   
+
