--- a/angular-shopping/src/app/shopping-list/shopping-list.component.html
+++ b/angular-shopping/src/app/shopping-list/shopping-list.component.html
@@ -14,7 +14,7 @@
                          {{item.price}}
                          <div class = "row>">
                              <button ng-click = "item.decrease()" class = "btn btn-danger">-</button>
-                             {{item.number}}
+                             {{item.amount}}
                              <button ng-click = "item.increase()" class = "btn btn-success">+</button>
                          </div>
                     </div>
