--- a/angular-shopping/src/app/header/header.component.html
+++ b/angular-shopping/src/app/header/header.component.html
@@ -1,15 +1,12 @@
-<nav class = "navbar navbar-default"> 
-    <div class="container-fluid"> 
-    <div class = "navbar-header">
-        <a href="#" class = "navbar-brand"> Item List</a>
-    </div>
-    
+<nav class = "navbar navbar-expand-lg navbar-dark bg-dark" > 
+   
+    <a href="#" class = "navbar-brand" style = "float: left;"> Item List</a>
+  
     <div class = "collapse navbar-collapse">
-        <ul class = "navbar-nav mr-auto" style="display: inline-block;">
-            <li><a href="#">Items</a> </li>
-            <li><a href="#">Shopping List</a> </li>
-        </ul>
-        <ul class = "nav navbar-nav navbar-right">
+        <ul class = "navbar-nav" style= "display: inline-block; padding-right: 20px;" >
+            <li routerLinkActive ="nav-item active" class = "nav-item"><a class ="nav-link" routerLink="/items" style = "float: left;">Items</a> </li>
+            <li routerLinkActive ="nav-item active" class = "nav-item"><a class ="nav-link"  routerLink="/shopping-list" style = "float: left;">Shopping List</a> </li>
+    
             <a href="#" class= "dropdown-toggle" role = "button">Manage</a> 
             <li class = "dropdown"> 
                 <ul class = "dropdown-menu">
@@ -17,8 +14,8 @@
                     <li><a href = "#"> Fetch Data</a></li>
                 </ul>
             </li>
-            </ul>
+        </ul>
     </div>
     
-</div>
+
 </nav>
