--- a/angular-shopping/src/app/items/items-list/a-item/a-item.component.html
+++ b/angular-shopping/src/app/items/items-list/a-item/a-item.component.html
@@ -1,11 +1,15 @@
-           <div class= "card">
-               
-               <img class = "card-img-top" [src] = "item.imagePath" style = "max-height: 100px;">
+<a style="cursor:pointer;"
+           [routerLink] = "[index]"
+           routerLinkActive = "active"
+           >
+           <div class ="card bg-light">
+           
+               <img class = "card-img-top" [src] = "item.imagePath" style = "max-height: 200px;">
                
                <div class = "card-body">
-                   <h5 class=card-title> {{item.name }}</h5>
+                   <h5 class= card-title> {{item.name }}</h5>
                    <p class = "card-text">{{item.details}} </p>
                </div>
                
-               
-           </div>
+                          </div>
+           </a>
