--- a/angular-shopping/src/app/items/items.component.html
+++ b/angular-shopping/src/app/items/items.component.html
@@ -1,9 +1,14 @@
-<div class = "row"> 
-    <div class = "col-5">
+<div class="row">
+    
+        <button class = "btn btn-success"> New Item</button>
+    
+</div>
+<div class = "row mx-0"> 
+    <div class = "col-7 w-100 mx-0 pl-0">
         <app-items-list></app-items-list>    
     </div>
-    <div class = "col-7"> 
-        <app-items-details></app-items-details>
+    <div class = "col-5 w-100 mx-0"> 
+        <router-outlet></router-outlet>
     </div>
     
 
