-authentication by email and password -user sent authentication link -all errors displayed

--- a/angular-shopping/src/app/header/header.component.html
+++ b/angular-shopping/src/app/header/header.component.html
@@ -3,17 +3,11 @@
     <a href="#" class = "navbar-brand" style = "float: left;"> Item List</a>
   
     <div class = "collapse navbar-collapse">
-        <ul class = "navbar-nav" style= "display: inline-block; padding-right: 20px;" >
-            <li routerLinkActive ="nav-item active" class = "nav-item"><a class ="nav-link" routerLink="/items" style = "float: left;">Items</a> </li>
-            <li routerLinkActive ="nav-item active" class = "nav-item"><a class ="nav-link"  routerLink="/shopping-list" style = "float: left;">Shopping List</a> </li>
-    
-            <a href="#" class= "dropdown-toggle" role = "button">Manage</a> 
-            <li class = "dropdown"> 
-                <ul class = "dropdown-menu">
-                    <li><a href = "#"> Save Data </a> </li>
-                    <li><a href = "#"> Fetch Data</a></li>
-                </ul>
-            </li>
+        <ul class = "navbar-nav" >
+            <li  routerLinkActive ="nav-item active" class = "nav-item"><a class ="nav-link" routerLink="/items" style = "float: left;">Items</a> </li>
+            <li  routerLinkActive ="nav-item active" class = "nav-item"><a class ="nav-link"  routerLink="/shopping-list" style = "float: left;">Shopping List</a> </li>
+            <li  routerLinkActive ="nav-item active" class = "nav-item"><a class ="nav-link"  routerLink="/signup" style = "float: left;">Signup</a> </li>
+            <li  routerLinkActive ="nav-item active" class = "nav-item"><a class ="nav-link"  routerLink="/signin" style = "float: left;">Login</a> </li>
         </ul>
     </div>
     
