--- a/angular-shopping/src/app/items/items-list/a-item/a-item.component.html
+++ b/angular-shopping/src/app/items/items-list/a-item/a-item.component.html
@@ -2,9 +2,9 @@
            [routerLink] = "[index]"
            routerLinkActive = "active"
            >
-           <div class ="card bg-light">
+           <div class ="card bg-light" style = "width: 400px;">
            
-               <img class = "card-img-top" [src] = "item.imagePath" style = "max-height: 200px;">
+               <img class = "card-img-top" [src] = "item.imagePath" style = "height: 200px;">
                
                <div class = "card-body">
                    <h5 class= card-title> {{item.name }}</h5>
