--- a/angular-shopping/src/app/items/items.component.html
+++ b/angular-shopping/src/app/items/items.component.html
@@ -3,7 +3,7 @@
     <div class = "col-7 w-100 mx-0 pl-0">
         <app-items-list></app-items-list>    
     </div>
-    <div class = "col-5 w-100 mx-0"> 
+    <div class = "col-5 w-100"> 
         <router-outlet></router-outlet>
     </div>
     
