--- a/angular-shopping/src/app/items/items-details/items-details.component.html
+++ b/angular-shopping/src/app/items/items-details/items-details.component.html
@@ -6,7 +6,7 @@
            <hr class = "my-4">
            <div class = row>
                <div class = "col-6">
-                  <h4> Rating: {{item.getRating()}}</h4>
+                  <h4> Rating: {{rating}} </h4>
                </div>
                <div class = "col-6">
                    <span class= "pull-right">
@@ -16,7 +16,19 @@
                </div> 
             </div>
            <p class = "lead">{{item.details}}</p>
-           <button class = "btn btn-success">Comment</button>
+           <div clss = "row"> 
+               <form class = "form-inline" (ngSubmit) = "onComment(f)" #f = "ngForm">
+                  
+                       <input type = "number" min = "1" max = "10" id = "rating" name = "rating" class = "form-control" ngModel>
+                   
+               
+                       <input type = "text" id = "comment" name = "comment" class = "form-control" ngModel/>
+                 
+               
+                       <button class = "btn btn-success" type = "submit">Comment</button>
+                 
+               </form>
+           </div>
            <div class ="row" *ngFor = "let comment of comments">
                <div class = "col-3">
                <p>User</p>
