--- a/angular-shopping/src/app/items/items-list/items-list.component.html
+++ b/angular-shopping/src/app/items/items-list/items-list.component.html
@@ -1,6 +1,5 @@
 
-<button class = "btn btn-success" (click) =  "onNewItem()"> New Item</button>
-
+<button *ngIf = "authService.isAuthenticated()" class = "btn btn-success" (click) =  "onNewItem()"> New Item</button>
 <div class = "card-deck" >
     <app-a-item  *ngFor = "let itemEl of items; let i = index"
         [item] = "itemEl"
