--- a/angular-shopping/src/app/items/items-details/items-details.component.html
+++ b/angular-shopping/src/app/items/items-details/items-details.component.html
@@ -17,7 +17,7 @@
             </div>
            <p class = "lead">{{item.details}}</p>
            <div clss = "row"> 
-               <form class = "form-inline" (ngSubmit) = "onComment(f)" #f = "ngForm">
+               <form *ngIf = "authService.isAuthenticated()" class = "form-inline" (ngSubmit) = "onComment(f)" #f = "ngForm">
                   
                        <input type = "number" min = "1" max = "10" id = "rating" name = "rating" class = "form-control" ngModel>
                    
@@ -41,8 +41,8 @@
            <div class = "row">
               <div class = "col-12">
                <span class = "pull-right">
-               <button class = "btn btn-outline-info" (click) = "onEditItem()"> Edit</button>
-               <button class = "btn btn-outline-danger">Delete</button>
+               <button *ngIf = "authService.isSM()" class = "btn btn-outline-info" (click) = "onEditItem()"> Edit</button>
+               <button *ngIf = "authService.isSM()" class = "btn btn-outline-danger">Delete</button>
                </span>
                </div>
            </div>
