--- a/angular-shopping/src/app/collections/collections.component.html
+++ b/angular-shopping/src/app/collections/collections.component.html
@@ -19,7 +19,22 @@
               <input class="form-check-input" type="radio" name="view" id="private" value="false">
               <label class="form-check-label" for="exampleRadios2">Private</label>
         </div>
+        <h5> Initial Item</h5>
+        <div class = "form-group">
+            
+            <label for = "itemname"> Name</label>
+            <input type = "text" id = "itemname" name = "itemname" class = "form-control" ngModel>
+        </div>
+        <div class = "form-group">
+            
+            <label for = "quantity"> Quantity</label>
+            <input type = "number" id = "quantity" name = "quantity" class = "form-control" ngModel>
+        </div>
+        
+        
         <button class = "btn btn-success" type = "submit"> Submit </button>
+    
+    
     </form>
 </ng-template>
 
